# voiceclone

./: CHANGELOG.md  LICENSE  PYTHON313_COMPATIBILITY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  test_system.py
soumyagpt/: __init__.py  cli.py  config.py  gemini.py  pipeline.py  stt.py  tts.py
